Clean up some additional issues
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>